...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eCJ-36-7qg">
                                                        <rect key="frame" x="0.0" y="0.0" width="50" height="57"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="AnimeButton"/>
                                                        <state key="normal" image="Anime Icon extra">
                                                            <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5Pw-3b-Vxg">
                                                        <rect key="frame" x="94.5" y="0.0" width="48" height="57"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="MangaButton"/>
                                                        <state key="normal" image="Manga icon extra">
                                                            <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="uNa-Md-I26">
                                                        <rect key="frame" x="174.5" y="0.0" width="75" height="57"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="FavouritesButton"/>
                                                        <state key="normal" image="star">
                                                            <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="T4e-Bg-t4k">
                                                        <rect key="frame" x="282" y="0.0" width="47" height="57"/>
                                                        <accessibility key="accessibilityConfiguration" identifier="ProfileButton"/>
                                                        <state key="normal" image="Profile weeb extra">
                                                            <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
...
                    </view>
                    <navigationItem key="navigationItem" title="Home" id="nVH-gG-c07">
                        <barButtonItem key="backBarButtonItem" title="Back" id="rTD-sY-KkP"/>
                    </navigationItem>
                    <connections>
...
                                                        <rect key="frame" x="0.0" y="0.0" width="64" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                        <state key="normal" title="Sign In">
                                                            <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
...
                                                        <rect key="frame" x="152" y="0.0" width="64" height="30"/>
                                                        <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                                        <state key="normal" title="Sign Up">
                                                            <color key="titleColor" systemColor="systemYellowColor" red="1" green="0.80000000000000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
...
